[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resource/Graphic/Card/border.png" type="Texture" id=1]
[ext_resource path="res://Script/Card/Card.gd" type="Script" id=2]
[ext_resource path="res://Resource/Graphic/Card/land.png" type="Texture" id=3]
[ext_resource path="res://Font.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 144 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 119.5, 145.5 )

[node name="Card" type="KinematicBody2D"]
scale = Vector2( 0.35, 0.35 )
z_index = 1
collision_layer = 2
collision_mask = 32769
input_pickable = true
script = ExtResource( 2 )

[node name="Border" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Resource" type="Sprite" parent="."]
position = Vector2( 0, 30 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CardCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardCollision"]
position = Vector2( -0.5, -1.5 )
shape = SubResource( 2 )

[node name="Count" type="Label" parent="."]
margin_left = -118.0
margin_top = -212.0
margin_right = 120.0
margin_bottom = -168.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="Name" type="Label" parent="."]
margin_left = -120.0
margin_top = -140.0
margin_right = 118.0
margin_bottom = -74.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="LerpTimer" type="Timer" parent="."]
one_shot = true

[node name="LerpTimer2" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
[connection signal="area_entered" from="CardCollision" to="." method="_on_CardCollision_area_entered"]
[connection signal="area_exited" from="CardCollision" to="." method="_on_CardCollision_area_exited"]
[connection signal="timeout" from="LerpTimer" to="." method="_on_LerpTimer_timeout"]
[connection signal="timeout" from="LerpTimer2" to="." method="_on_LerpTimer2_timeout"]
